--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "antd": "^4.16.13",
+    "axios": "^0.21.4",
     "gray-matter": "^4.0.3",
+    "moment": "^2.29.1",
     "next": "^11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
